--- a/Marindeck/View/Base.lproj/Main.storyboard
+++ b/Marindeck/View/Base.lproj/Main.storyboard
@@ -197,6 +197,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="gJ7-vG-6a9" kind="modal" id="7nh-vr-vga"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" id="468-iX-VTS">
                                         <rect key="frame" x="20" y="279.5" width="374" height="43.5"/>
@@ -421,6 +424,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Om-ic-6z1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="749" y="75"/>
+        </scene>
+        <!--CustomCSS View Controller-->
+        <scene sceneID="4il-HY-nUh">
+            <objects>
+                <viewController id="gJ7-vG-6a9" customClass="CustomCSSViewController" customModule="Marindeck" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6q0-DQ-TvK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLI-DH-Zb3">
+                                <rect key="frame" x="359" y="20.5" width="35" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="KEA-tK-WVS"/>
+                                    <constraint firstAttribute="height" constant="35" id="Nmj-tx-20Z"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" systemColor="secondaryLabelColor"/>
+                                <state key="normal" backgroundImage="xmark.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="close" destination="wAT-an-moa" eventType="touchUpInside" id="lGS-H1-wLE"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="esX-y6-dzr">
+                                <rect key="frame" x="0.0" y="59" width="414" height="783"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ceS-uT-9nk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="esX-y6-dzr" secondAttribute="bottom" id="106-13-axy"/>
+                            <constraint firstItem="esX-y6-dzr" firstAttribute="top" secondItem="TLI-DH-Zb3" secondAttribute="bottom" constant="4" id="G5v-JO-aYu"/>
+                            <constraint firstItem="esX-y6-dzr" firstAttribute="trailing" secondItem="ceS-uT-9nk" secondAttribute="trailing" id="La8-is-ZMQ"/>
+                            <constraint firstItem="ceS-uT-9nk" firstAttribute="trailing" secondItem="TLI-DH-Zb3" secondAttribute="trailing" constant="20" id="egM-kL-zP8"/>
+                            <constraint firstItem="TLI-DH-Zb3" firstAttribute="top" secondItem="ceS-uT-9nk" secondAttribute="top" constant="20" id="kpX-q8-h4R"/>
+                            <constraint firstItem="esX-y6-dzr" firstAttribute="leading" secondItem="ceS-uT-9nk" secondAttribute="leading" id="l4W-S0-21S"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="QZl-ZD-pKx"/>
+                    <connections>
+                        <outlet property="tableView" destination="esX-y6-dzr" id="Oc3-4F-ttZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KU1-zO-i6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1484" y="-710"/>
         </scene>
         <!--CustomJS View Controller-->
         <scene sceneID="Qal-Ka-xB2">
