--- a/Marindeck/View/Settings/Custom/CustomCellTableViewCell.xib
+++ b/Marindeck/View/Settings/Custom/CustomCellTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,33 +12,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="CustomCellTableViewCell" customModule="Marindeck" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
+            <rect key="frame" x="0.0" y="0.0" width="518" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="518" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s7e-rw-gf0">
-                        <rect key="frame" x="12" y="8" width="296" height="78"/>
+                        <rect key="frame" x="12" y="8" width="494" height="78"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名称未設定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kzX-XG-GGO">
-                                <rect key="frame" x="16" y="12" width="268" height="25.5"/>
+                                <rect key="frame" x="16" y="12" width="466" height="25.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3日前" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZZ-dd-YFb">
-                                <rect key="frame" x="12" y="56" width="272" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="12" y="56" width="470" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" systemColor="placeholderTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nmp-4f-Bhk">
+                                <rect key="frame" x="433" y="23.5" width="51" height="31"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="QZZ-dd-YFb" secondAttribute="bottom" constant="4" id="aDs-r5-g8C"/>
+                            <constraint firstItem="nmp-4f-Bhk" firstAttribute="centerY" secondItem="s7e-rw-gf0" secondAttribute="centerY" id="Mp4-K1-tzW"/>
+                            <constraint firstAttribute="bottom" secondItem="QZZ-dd-YFb" secondAttribute="bottom" constant="6" id="aDs-r5-g8C"/>
                             <constraint firstAttribute="trailing" secondItem="QZZ-dd-YFb" secondAttribute="trailing" constant="12" id="f1T-Bv-wkW"/>
                             <constraint firstItem="kzX-XG-GGO" firstAttribute="leading" secondItem="s7e-rw-gf0" secondAttribute="leading" constant="16" id="gxd-Ig-3WD"/>
+                            <constraint firstAttribute="trailing" secondItem="nmp-4f-Bhk" secondAttribute="trailing" constant="12" id="ip9-vf-iux"/>
                             <constraint firstAttribute="trailing" secondItem="kzX-XG-GGO" secondAttribute="trailing" constant="12" id="kLS-2b-5dZ"/>
                             <constraint firstItem="QZZ-dd-YFb" firstAttribute="leading" secondItem="s7e-rw-gf0" secondAttribute="leading" constant="12" id="rw1-v7-Ti4"/>
                             <constraint firstItem="kzX-XG-GGO" firstAttribute="top" secondItem="s7e-rw-gf0" secondAttribute="top" constant="12" id="tn1-te-jOC"/>
@@ -59,7 +64,7 @@
                 <outlet property="dateLabel" destination="QZZ-dd-YFb" id="Tmd-qW-ehe"/>
                 <outlet property="titleLabel" destination="kzX-XG-GGO" id="D83-AV-opE"/>
             </connections>
-            <point key="canvasLocation" x="34.782608695652179" y="131.25"/>
+            <point key="canvasLocation" x="178.2608695652174" y="131.25"/>
         </tableViewCell>
     </objects>
     <resources>
