--- a/Marindeck/View/Settings/CustomJS/EditCustomJSViewController.xib
+++ b/Marindeck/View/Settings/CustomJS/EditCustomJSViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,33 +21,18 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOv-F8-pL4">
-                    <rect key="frame" x="359" y="20.5" width="35" height="34"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="aNa-VN-vYi"/>
-                        <constraint firstAttribute="width" constant="35" id="v0y-5q-Awj"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="tintColor" systemColor="secondaryLabelColor"/>
-                    <state key="normal" backgroundImage="xmark.circle.fill" catalog="system"/>
-                    <connections>
-                        <action selector="close" destination="-1" eventType="touchUpInside" id="IfU-wP-wL2"/>
-                    </connections>
-                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZtJ-2H-Zkv">
-                    <rect key="frame" x="0.0" y="67" width="414" height="741"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="ZtJ-2H-Zkv" firstAttribute="top" secondItem="iOv-F8-pL4" secondAttribute="bottom" constant="12" id="Ihu-Im-6zj"/>
                 <constraint firstItem="ZtJ-2H-Zkv" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="SJ2-mu-hB3"/>
-                <constraint firstItem="iOv-F8-pL4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="T09-Q5-UBT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZtJ-2H-Zkv" secondAttribute="trailing" id="WTq-gA-n7O"/>
                 <constraint firstItem="ZtJ-2H-Zkv" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="jaF-z3-fVQ"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iOv-F8-pL4" secondAttribute="trailing" constant="20" id="vvd-Cq-cJ3"/>
+                <constraint firstItem="ZtJ-2H-Zkv" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="nSL-ZS-ehB"/>
             </constraints>
             <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-39.130434782608695" y="97.767857142857139"/>
@@ -67,10 +52,6 @@
         </toolbar>
     </objects>
     <resources>
-        <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
